adjust max height to fix mis-aligned post previews

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -64,9 +64,10 @@ samp {
 
 .post-float {
   width: 350px;
-  margin-bottom: 4rem;
+  margin-bottom: 6rem;
   margin-left: auto;
   margin-right: auto;
+  max-height: 8rem;
 }
 
 .post-float:last-of-type {
